spring-gumball/ingress.yaml
apiVersion: "extensions/v1"
kind: "Ingress"
metadata:
  name: "spring-gumball-ingress"
  namespace: "default"
spec:
  backend:
    serviceName: "spring-gumball-service"
    servicePort: 8080
